--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
           <li>SEO setup</li>
           <li>Contact form</li>
         </ul>
-        <a href="contact.html" class="btn btn--primary">Get Started</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Get Started</a>
       </div>
       <div class="card price price--featured">
         <h3>Web App Pro</h3>
@@ -45,7 +45,7 @@
           <li>Database & auth</li>
           <li>Deployment</li>
         </ul>
-        <a href="contact.html" class="btn btn--primary">Request Quote</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Request Quote</a>
       </div>
       <div class="card price">
         <h3>Automation Suite</h3>
@@ -55,7 +55,7 @@
           <li>Data scraping/cleaning</li>
           <li>Dashboards</li>
         </ul>
-        <a href="contact.html" class="btn btn--primary">Discuss</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Discuss</a>
       </div>
     </div>
 
