--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — Tech Command</title>
+  <title>About — GraphiTech Command</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.png" />
 </head>
 <body>
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="Tech Command logo" />
-      <span>Tech Command</span>
+      <img src="assets/logo.png" alt="GraphiTech Command logo" />
+      <span>GraphiTech Command</span>
     </a>
     <nav id="nav" class="nav">
       <a href="index.html">Home</a>
@@ -25,36 +25,52 @@
   </header>
 
   <main class="container section">
-    <h1>About Tech Command</h1>
-    <p>We’re a builder‑first team focused on practical, production‑ready solutions. From startup landing pages to full web apps and automations, we help you ship confidently.</p>
+    <h1>About GraphiTech Command</h1>
+    <p>
+      GraphiTech Command is a dynamic company that blends creativity and technology. 
+      We specialize in <strong>graphics design, printing, and branding</strong> alongside our 
+      original tech services like <strong>web development, automation, and blockchain solutions</strong>. 
+      Our mission is to empower individuals, startups, and businesses with impactful designs 
+      and production-ready technologies.
+    </p>
 
     <div class="grid cols-2">
       <div class="card">
         <h3>Mission</h3>
-        <p>Enable creators and businesses to build, learn, and deploy with clarity and speed.</p>
+        <p>
+          To deliver innovative designs and cutting-edge tech solutions that help brands 
+          and businesses stand out while achieving efficiency and growth.
+        </p>
       </div>
       <div class="card">
         <h3>Values</h3>
         <ul>
+          <li>Creativity with purpose</li>
           <li>Clarity over complexity</li>
-          <li>Security by default</li>
           <li>Speed with quality</li>
+          <li>Customer success first</li>
         </ul>
       </div>
     </div>
 
     <h2>What we do</h2>
-    <p>We combine content (tutorials, guides) with services (development, automation, blockchain) to give you end‑to‑end support.</p>
+    <p>
+      At GraphiTech Command, we combine <strong>design and branding</strong> (logos, flyers, 
+      business cards, marketing prints) with <strong>technology services</strong> 
+      (websites, apps, automation, blockchain solutions).  
+      Whether you’re a small business or a growing enterprise, we give you 
+      end-to-end support that’s creative, modern, and effective.
+    </p>
   </main>
 
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <a class="brand brand--footer" href="index.html">
-          <img src="assets/logo.png" alt="Tech Command logo" />
-          <span>Tech Command</span>
+          <img src="assets/logo.png" alt="GraphiTech Command logo" />
+          <span>GraphiTech Command</span>
         </a>
-        <p>© <span id="year"></span> Tech Command. All rights reserved.</p>
+        <p>© <span id="year"></span> GraphiTech Command. All rights reserved.</p>
       </div>
       <div>
         <h4>Explore</h4>
