--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tech Command — Build. Learn. Deploy.</title>
-  <meta name="description" content="Tech Command: tutorials, services, and tools to build, learn, and deploy modern tech solutions." />
+  <title>GraphiTech Command — Design. Print. Brand. Deploy.</title>
+  <meta name="description" content="GraphiTech Command: graphics design, printing, branding, tutorials, services, and tools to design, build, and deploy modern solutions." />
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.png" />
 </head>
@@ -12,8 +12,8 @@
   <!-- Header / Nav -->
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="Tech Command logo" />
-      <span>Tech Command</span>
+      <img src="assets/logo.png" alt="GraphiTech Command logo" />
+      <span>GraphiTech Command</span>
     </a>
     <nav id="nav" class="nav">
       <a href="index.html" class="active">Home</a>
@@ -29,10 +29,10 @@
   <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1>Build. Learn. Deploy.</h1>
-      <p>Tech Command helps creators and teams ship faster — with tutorials, tools, and on‑demand services.</p>
+      <h1>Design. Print. Brand. Deploy.</h1>
+      <p>GraphiTech Command empowers businesses and creators with graphics, printing, branding, and tech solutions — all in one place.</p>
       <div class="actions">
-        <a href="services.html" class="btn btn--primary">Explore Services</a>
+        <a href="services.html"= class="btn btn--primary">Engage Our Services</a>
         <a href="blog.html" class="btn btn--ghost">Read Tutorials</a>
       </div>
     </div>
@@ -42,16 +42,20 @@
   <section class="section">
     <div class="container grid cols-3">
       <div class="card">
-        <h3>Web Development</h3>
-        <p>Clean, responsive, SEO‑ready websites and apps using modern standards.</p>
+        <h3>Graphics & Design</h3>
+        <p>Logos, flyers, and stunning visuals tailored to your brand identity.</p>
       </div>
       <div class="card">
-        <h3>Automation</h3>
-        <p>Save time with custom scripts and workflows that handle the boring stuff.</p>
+        <h3>Printing & Branding</h3>
+        <p>High-quality printing services and branded materials that make you stand out.</p>
       </div>
       <div class="card">
-        <h3>Blockchain</h3>
-        <p>Smart contracts, wallets, and integrations built with security in mind.</p>
+        <h3>Web Development & Automation</h3>
+        <p>Responsive websites, smart workflows, and modern apps built to last.</p>
+      </div>
+      <div class="card">
+        <h3>Blockchain Solutions</h3>
+        <p>Secure smart contracts, wallets, and blockchain integrations.</p>
       </div>
     </div>
   </section>
@@ -59,7 +63,7 @@
   <!-- Newsletter CTA -->
   <section class="section section--accent">
     <div class="container cta">
-      <h2>Get updates from Tech Command</h2>
+      <h2>Get updates from GraphiTech Command</h2>
       <form id="newsletterForm" class="inline-form" novalidate>
         <input type="email" id="newsletterEmail" placeholder="Enter your email" required />
         <button type="submit" class="btn btn--primary">Subscribe</button>
@@ -73,10 +77,10 @@
     <div class="container footer-grid">
       <div>
         <a class="brand brand--footer" href="index.html">
-          <img src="assets/logo.png" alt="Tech Command logo" />
-          <span>Tech Command</span>
+          <img src="assets/logo.png" alt="GraphiTech Command logo" />
+          <span>GraphiTech Command</span>
         </a>
-        <p>© <span id="year"></span> Tech Command. All rights reserved.</p>
+        <p>© <span id="year"></span> GraphiTech Command. All rights reserved.</p>
       </div>
       <div>
         <h4>Explore</h4>
