--- a/services.html
+++ b/services.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Services — Tech Command</title>
+  <title>Services — GraphiTech Command</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.png" />
 </head>
 <body>
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="Tech Command logo" />
-      <span>Tech Command</span>
+      <img src="assets/logo.png" alt="GraphiTech Command logo" />
+      <span>GraphiTech Command</span>
     </a>
     <nav id="nav" class="nav">
       <a href="index.html">Home</a>
@@ -31,7 +31,7 @@
         <h3>Website Starter</h3>
         <p class="price__value">₦150,000</p>
         <ul>
-          <li>5‑page responsive site</li>
+          <li>5-page responsive site</li>
           <li>SEO setup</li>
           <li>Contact form</li>
         </ul>
@@ -59,6 +59,40 @@
       </div>
     </div>
 
+    <h2>Graphics, Printing & Branding</h2>
+    <div class="grid cols-3">
+      <div class="card price">
+        <h3>Graphics Design</h3>
+        <p class="price__value">From ₦20,000</p>
+        <ul>
+          <li>Logos & flyers</li>
+          <li>Social media kits</li>
+          <li>Business cards</li>
+        </ul>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Hire Us</a>
+      </div>
+      <div class="card price">
+        <h3>Printing Services</h3>
+        <p class="price__value">Custom Quote</p>
+        <ul>
+          <li>Posters & banners</li>
+          <li>Branded merchandise</li>
+          <li>Bulk printing</li>
+        </ul>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Order Now</a>
+      </div>
+      <div class="card price">
+        <h3>Branding Solutions</h3>
+        <p class="price__value">Custom Quote</p>
+        <ul>
+          <li>Corporate branding</li>
+          <li>Event branding</li>
+          <li>Product packaging</li>
+        </ul>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Request Quote</a>
+      </div>
+    </div>
+
     <h2>Blockchain & Smart Contracts</h2>
     <p>Token launches, smart contract development, audits (basic), and integrations for EVM chains.</p>
   </main>
@@ -67,10 +101,10 @@
     <div class="container footer-grid">
       <div>
         <a class="brand brand--footer" href="index.html">
-          <img src="assets/logo.png" alt="Tech Command logo" />
-          <span>Tech Command</span>
+          <img src="assets/logo.png" alt="GraphiTech Command logo" />
+          <span>GraphiTech Command</span>
         </a>
-        <p>© <span id="year"></span> Tech Command. All rights reserved.</p>
+        <p>© <span id="year"></span> GraphiTech Command. All rights reserved.</p>
       </div>
       <div>
         <h4>Explore</h4>
