--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — Tech Command</title>
+  <title>Contact — GraphiTech Command</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.png" />
 </head>
@@ -11,7 +11,7 @@
   <header class="site-header">
     <a class="brand" href="index.html">
       <img src="assets/logo.png" alt="Tech Command logo" />
-      <span>Tech Command</span>
+      <span>GraphiTech Command</span>
     </a>
     <nav id="nav" class="nav">
       <a href="index.html">Home</a>
@@ -70,9 +70,9 @@
       <div>
         <a class="brand brand--footer" href="index.html">
           <img src="assets/logo.png" alt="Tech Command logo" />
-          <span>Tech Command</span>
+          <span> GraphiTech Command</span>
         </a>
-        <p>© <span id="year"></span> Tech Command. All rights reserved.</p>
+        <p>© <span id="year"></span> GraphiTech Command. All rights reserved.</p>
       </div>
       <div>
         <h4>Explore</h4>
