--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
     <div class="grid cols-3">
       <div class="card price">
         <h3>Graphics Design</h3>
-        <p class="price__value">From ₦20,000</p>
+        <p class="price__value">Custom Quote</p>
         <ul>
           <li>Logos & flyers</li>
           <li>Social media kits</li>
