--- a/services.html
+++ b/services.html
@@ -4,27 +4,32 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Services — GraphiTech Command</title>
+  <meta name="description" content="Explore the comprehensive services offered by GraphiTech Command, including web development, graphics design, printing, branding, and blockchain solutions." />
+  <meta name="keywords" content="services, web development, graphics design, printing, branding, blockchain, automation, website, pricing" />
+  <link rel="canonical" href="https://www.yourwebsite.com/services.html" />
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.png" />
 </head>
 <body>
   <header class="site-header">
-    <a class="brand" href="index.html">
+    <a class="brand" href="index.html" aria-label="GraphiTech Command home">
       <img src="assets/logo.png" alt="GraphiTech Command logo" />
       <span>GraphiTech Command</span>
     </a>
     <nav id="nav" class="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html" class="active">Services</a>
-      <a href="contact.html" class="btn btn--primary">Contact</a>
+      <a href="index.html" aria-label="Home page">Home</a>
+      <a href="about.html" aria-label="About us page">About</a>
+      <a href="services.html" class="active" aria-label="Our services page">Services</a>
+      <a href="contact.html" class="btn btn--primary" aria-label="Contact us page">Contact</a>
       <button id="themeToggle" class="icon-btn" aria-label="Toggle theme" title="Toggle theme">🌓</button>
     </nav>
     <button id="menuToggle" class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
   </header>
 
   <main class="container section">
-    <h1>Services</h1>
+    <h1>Our Services</h1>
+    
+    <h2>Web Development & Automation</h2>
     <div class="grid cols-3">
       <div class="card price">
         <h3>Website Starter</h3>
@@ -34,7 +39,7 @@
           <li>SEO setup</li>
           <li>Contact form</li>
         </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Get Started</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Get Started with Website Starter">Get Started</a>
       </div>
       <div class="card price price--featured">
         <h3>Web App Pro</h3>
@@ -44,7 +49,7 @@
           <li>Database & auth</li>
           <li>Deployment</li>
         </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Request Quote</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Request a quote for Web App Pro">Request Quote</a>
       </div>
       <div class="card price">
         <h3>Automation Suite</h3>
@@ -54,7 +59,7 @@
           <li>Data scraping/cleaning</li>
           <li>Dashboards</li>
         </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Discuss</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Discuss Automation Suite services">Discuss</a>
       </div>
     </div>
 
@@ -68,7 +73,7 @@
           <li>Social media kits</li>
           <li>Business cards</li>
         </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Hire Us</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Hire us for Graphics Design">Hire Us</a>
       </div>
       <div class="card price">
         <h3>Printing Services</h3>
@@ -78,7 +83,7 @@
           <li>Branded merchandise</li>
           <li>Bulk printing</li>
         </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Order Now</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Order Printing Services">Order Now</a>
       </div>
       <div class="card price">
         <h3>Branding Solutions</h3>
@@ -88,18 +93,23 @@
           <li>Event branding</li>
           <li>Product packaging</li>
         </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Request Quote</a>
+        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Request a quote for Branding Solutions">Request Quote</a>
       </div>
     </div>
 
     <h2>Blockchain & Smart Contracts</h2>
-    <p>Token launches, smart contract development, audits (basic), and integrations for EVM chains.</p>
+    <p>We provide a range of blockchain services, including:</p>
+    <ul>
+      <li>Token launches</li>
+      <li>Smart contract development & audits (basic)</li>
+      <li>Integrations for EVM chains</li>
+    </ul>
   </main>
 
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
-        <a class="brand brand--footer" href="index.html">
+        <a class="brand brand--footer" href="index.html" aria-label="GraphiTech Command home">
           <img src="assets/logo.png" alt="GraphiTech Command logo" />
           <span>GraphiTech Command</span>
         </a>
@@ -108,17 +118,17 @@
       <div>
         <h4>Explore</h4>
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html" aria-label="About us page">About</a></li>
+          <li><a href="services.html" aria-label="Our services page">Services</a></li>
+          <li><a href="contact.html" aria-label="Contact us page">Contact</a></li>
         </ul>
       </div>
       <div>
         <h4>Follow</h4>
         <ul>
-          <li><a href="#">Twitter/X</a></li>
-          <li><a href="#">LinkedIn</a></li>
-          <li><a href="#">GitHub</a></li>
+          <li><a href="#" aria-label="Twitter/X profile">Twitter/X</a></li>
+          <li><a href="#" aria-label="LinkedIn profile">LinkedIn</a></li>
+          <li><a href="#" aria-label="GitHub profile">GitHub</a></li>
         </ul>
       </div>
     </div>
